# FlexiGen

./: .gitignore  LICENSE  README.md  Test.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: analyze.yml  update.yml
apps/: README.md  chatbot-opt30b-80-20-100-0-100-0-compress-all-1.bat  chatbot-opt66b-50-10-100-0-100-0-compress-all.bat  chatbot.py  completion.py
benchmark/: batch_size_table.md
benchmark/flexgen/: README.md  bench_175b_1x4.sh  bench_175b_4x1.sh  bench_30b_1x4.sh  bench_30b_4x1.sh  bench_6.7b_1x4.sh  bench_6.7b_4x1.sh  bench_dist_multi_node.sh  bench_dist_single_node.sh  bench_scan_175b.sh  bench_suite.py  bench_suite2.py
benchmark/hf/: README.md  bench_all_1x4.sh  bench_ds_30b_1x4.sh  bench_ds_30b_4x1.sh  bench_ds_6.7b_1x4.sh  hf_opt.py
benchmark/hf_ds/: README.md  bench_ds_175b_4x1.sh  bench_ds_6.7b_2x1.sh  bench_ds_6.7b_4x1.sh  bench_hf.py  hostfile
benchmark/petals/: README.md  run_opt_requests.py
codeQL/: query.ql
docs/: disk_commands.txt  gcp_setup.md  paper.md
experimental/: cost_model.py  fit_cost_model.py
flexgen/: Test.py  compression.py  dist_flex_opt.py  dist_utils.py  flex_llama.py  flex_opt.py  flex_qwen.py  llama_config.py  opt_config.py  profile_bandwidth.py  profile_matmul.py  pytorch_backend.py  qwen_config.py  timer.py  utils.py  xpu_utils.py
flexgen/apps/: README.md  chatbot.py  completion.py  fast_test_helm.py  helm_mmlu.py  helm_passed_30b.sh  helm_real_run.py  helm_run.py  helm_xsum_summarization.py  requirements.txt  run_helm_30b.sh  skypilot.yaml  task.yaml
flexgen/apps/data_wrangle/: README.md  data_wrangle_run.py  install.sh  test_batch_query_all_opt175b.sh  test_batch_query_all_opt30b.sh  test_batch_query_all_opt6.7b.sh  test_batch_query_case.sh  test_query_tmp.sh  test_single_query_all_opt6.7b.sh  test_single_query_case.sh
flexgen/apps/data_wrangle/utils/: constants.py  data_utils.py  prompt_utils.py  utils.py
scripts/: mount_nvme_aws.sh  mount_nvme_gcp.sh  step_2_consolidate_992_shards_to_singleton.py  step_3_convert_to_numpy_weights.py  utils.py
